New and much precise two-word category

--- a/2022-01-27-cognitive-biases.org
+++ b/2022-01-27-cognitive-biases.org
@@ -4,7 +4,7 @@ layout: page
 title: The Cognitive Biases -
 tagline: " a set of rigid obstacles to make a thought"
 permalink: /personal/growth/cognitive_biases.html
-categories: [personal-growth, cognition, biases]
+categories: [personal-growth, cognition biases]
 tags: [become, yourself, thought, contemplation]
 ---
 #+END_EXPORT
