An initial overture to the article

--- a/2022-01-31-Plato's-quotes.org
+++ b/2022-01-31-Plato's-quotes.org
@@ -16,3 +16,12 @@ tags: [become, yourself, wit, wisdom]
 
 * Prelude
 
+Even shallow attention on to a history of human race intellectual
+gestation might disclose fact its initialization in the ancient
+period. Thurther deduction show up its huge bonds with writing and
+literacy, so it defineteley points on one of the most ancient Greek
+philosopher ever known, the student of Socrates and the teacher of
+Aristotle, - *Plato* (born 428/427 bce, Athens, Greece—died 348/347,
+Athens)
+
+* Quotes
