Several  Plato's short quotations

--- a/2022-01-31-Plato's-quotes.org
+++ b/2022-01-31-Plato's-quotes.org
@@ -25,3 +25,27 @@ Aristotle, - *Plato* (born 428/427 bce, Athens, Greece—died 348/347,
 Athens)
 
 * Quotes
+
+** The beginning
+is the most important part of the work.
+
+** I shall assume
+that your silence gives consent.
+
+**  Wonder is the feeling of a philosopher,
+and philosophy begins in wonder.
+
+** Perception and knowledge
+could never be the same.
+
+** No one should be discouraged, Theaetetus,
+who can make constant progress, even though it be slow.
+
+** It is impossible to conceive
+of many without one.
+
+** All that is said by any of us
+can only be imitation and representation.
+
+** Friends have all
+things in common.
