--- a/2022-01-27-cognitive-biases.org
+++ b/2022-01-27-cognitive-biases.org
@@ -23,9 +23,9 @@ following one's heart, doing what one wants (able) to do and other
 peculiar points of view completely displace any reasonable approaches
 due to their relative complexity and stochastic nature.
 
-Naturally, who would be interesting to deeply contemplate about some
-trivial issue several hours or even days and as result achieve a total
-failure? It's ridiculous and seems like a silly time wasting.
+Naturally, who would be interesting to mull over a trivial issue for
+several hours or even days and as result achieve a total failure?
+It's ridiculous and seems like a silly time wasting.
 
 * What is cognition?
 
