A set of final correctioins

--- a/2022-02-01-learning-perspectives-intro.org
+++ b/2022-02-01-learning-perspectives-intro.org
@@ -18,62 +18,75 @@ This is the intro to the module perspectives on learning an
 instruction in which we are going to explore three different
 theoretical perspectives on the way learning and instruction have been
 studied. But before we start to do that I would like to zoom in on a
-very old beard piece of art a fresco made by raphael and shown in the
-vatican museums in Rome. Here you see a very famous school of virtual
-school the school of athens in which I myself very much would like to
-have been a teacher because all the famous philosophers are there you
-see Sir process sitting there on the stairs but more importantly we
-will zoom in on two very famous philosophers Plato Aristotle Plato on
-the left is pointing upwards with this digit finger and Aristotle is
-is pointing in front of him to the world around him why these two
-philosophers here at the start of this module on learning and
-instruction well they are a source of inspiration for many
-philosophers to come many learning theorists to come.
+very old beard piece of art a fresco made by Raphael and shown in the
+vatican museums in Rome. Here you see a very famous school of athens
+in which I myself very much would like to have been a teacher because
+all the famous philosophers are there. You see [] sitting there on the
+stairs but more importantly we will zoom in on two very famous
+philosophers Plato Aristotle. Plato on the left is pointing upwards
+with this digit finger, and Aristotle is is pointing in front of him to
+the world around him.
+
+Why these two philosophers here at the start of this module on
+learning and instruction? Well they are a source of inspiration for
+many philosophers to come many learning theorists to come.
 
 Plato is pointing upwards because he considers the world of pure ideas
-somewhere up in the heavens as the source of our knowledge the world
+somewhere up in the heavens as the source of our knowledge. The world
 of pure ideas has in store all the knowledge we as human beings can
-develop and when we are born as human beings we are already gifted
-with this knowledge basically it's its inborn all we have to do is
-just recollect what has been stored in our mind already all learning
-is but three collection as Plato phrases it now the view of Aristotle
-is completely opposite because he considers the world around us as the
-source of our knowledge so we have to do we have to act and to explore
-the world to experience in order to collect knowledge to learn so
-learning is a matter of experiencing the world around us concrete
-experience is the basis of all learning and knowledge acquisition so
-these two positions are completely opposite and they have inspired in
-fact a lot of theorists therefore I would like to draw your attention
-to the two both of these folds famous philosophers just focus on a
-modern philosopher called noam chomsky a famous linguist this idea is
-that people are born with what equals a language acquisition device a
-piece of equipment which enables us to develop language skills in
-develop the use of language now this is basically such an inborn thing
-such an inborn device which is part Plato's idea of everything has
-been in born and just has to be activated an example of such a failing
-activation is basically the the story of non foul survive the wild
-child which was discovered in 1800 by parisien doctor who tried to
-raise him and to try to teach him language skills because the the boy
-had passed the particular age the critical period in which he would
-have been able to develop these skills without hearing the knowledge
-in the boots ready was raised therefore he could not you know later on
-developed this mastery of of language anymore and very nice film made
-by 434 so if you have to challenge you should try to see it so this is
-the the plate of sight and perhaps you can also give one example of a
-philosopher of a am a philosopher who actually adults the Aristotelian
-point of view John Dewey famous American pedagogue and philosopher who
-emphasized that experience is the base of our knowledge we learn by
-doing not by observing you cannot learn to play football by just
-observing football matches that the spectator position as do be called
-it is not the proper place to learn therefore we have to actually have
-to experience and in the course of this acting and experiencing we
-will gradually develop language learning and impossible knowledge of
-course so these two relatively modern philosophers and theories do
-remind us of the old positions of Plato never stuff on therefore I
+develop. And when we are born as human beings we are already gifted
+with this knowledge. Basically it's its inborn all we have to do is
+just recollect what has been stored in our mind already. All learning
+is but three collection as Plato phrases.
+
+Now the view of Aristotle is completely opposite because he considers
+the world around us as the source of our knowledge. So we have to do
+we have to act and to explore the world to experience in order to
+collect knowledge to learn. So learning is a matter of experiencing the
+world around us.
+
+Concrete experience is the basis of all learning and knowledge
+acquisition. So these two positions are completely opposite and they
+have inspired in fact a lot of theorists. Therefore I would like to
+draw your attention to the two, Both of these folds.
+
+Famous philosophers just focus on a modern philosopher called Noam
+Chomsky a famous linguist. His idea is that people are born with what
+equals a language acquisition device. A piece of equipment which
+enables us to develop language skills in develop the use of language.
+Now this is basically such an inborn thing such an inborn device which
+is part Plato's idea of everything has been in born and just has to be
+activated.
+
+An example of such a failing activation is basically the the story of
+non foul survive the wild child which was discovered in 1800 by
+parisien doctor who tried to raise him and to try to teach him
+language skills. Because the the boy had passed the particular age the
+critical period in which he would have been able to develop these
+skills without hearing the knowledge in the boots ready was raised
+therefore he could not.
+
+You know later on developed this mastery of of language anymore and
+very nice film made by 434 so if you have to challenge you should try
+to see it so this is the the plate of sight and perhaps you can also
+give one example of a philosopher of a am a philosopher who actually
+adults the Aristotelian point of view.
+
+John Dewey famous American pedagogue and philosopher who emphasized
+that experience is the base of our knowledge we learn by doing not by
+observing. You cannot learn to play football by just observing
+football matches. That the spectator position as do be called it is
+not the proper place to learn therefore we have to actually have to
+experience and in the course of this acting and experiencing.
+
+We will gradually develop language learning and impossible knowledge
+of course. So these two relatively modern philosophers and theories do
+remind us of the old positions of Plato never stuff on. Therefore I
 would like to start with then we will return to these positions later
-on in this module okay now we can just have a look at what we are
-going to do in the module we are going to subsequently explorer
-behaviorism cognitivism and constructivism as prosper theoretical
-perspectives on learning and instruction and eventually we will
-discuss a few research methods which are used by researchers in this
-particular domain
+on in this module.
+
+Now we can just have a look at what we are going to do in the module.
+We are going to subsequently explore behaviorism, cognitivism and
+constructivism as prosper theoretical perspectives on learning and
+instruction and eventually we will discuss a few research methods,
+which are used by researchers in this particular domain.
