A set of final corrections

--- a/2022-02-01-learning-perspectives-intro.org
+++ b/2022-02-01-learning-perspectives-intro.org
@@ -1,10 +1,10 @@
 #+BEGIN_EXPORT html
 ---
 layout: page
-title: Perspectives on Learning -
-tagline: " and instruction"
+title: Perspectives
+tagline: " on learning and instruction. Intro."
 permalink: /learning/course/perspectives_on_learning_intro.html
-categories: [learning, perspective]
+categories: [perspectives on learning]
 tags: [intro]
 ---
 #+END_EXPORT
@@ -21,11 +21,11 @@ studied. But before we start to do that I would like to zoom in on a
 very old beard piece of art a fresco made by Raphael and shown in the
 vatican museums in Rome. Here you see a very famous school of athens
 in which I myself very much would like to have been a teacher because
-all the famous philosophers are there. You see [] sitting there on the
-stairs but more importantly we will zoom in on two very famous
-philosophers Plato Aristotle. Plato on the left is pointing upwards
-with this digit finger, and Aristotle is is pointing in front of him to
-the world around him.
+all the famous philosophers are there. You see Diogenes sitting there
+on the stairs but more importantly we will zoom in on two very famous
+philosophers Plato and Aristotle. Plato on the left is pointing upwards
+with this digit finger, and Aristotle is is pointing in front of him
+to the world around him.
 
   #+CAPTION: Plato and Aristotle
   #+ATTR_HTML: :alt Plato and Aristotle :title Two Philosophers :align center
