Minor cosmetical enhancements

--- a/2022-01-27-cognitive-biases.org
+++ b/2022-01-27-cognitive-biases.org
@@ -1,8 +1,8 @@
 #+BEGIN_EXPORT html
 ---
 layout: page
-title: The Cognitive Biases -
-tagline: " a set of rigid obstacles to make a thought"
+title: Cognitive Biases
+tagline: " are human saviour"
 permalink: /personal/growth/cognitive_biases.html
 categories: [personal-growth, cognition biases]
 tags: [become, yourself, thought, contemplation]
