--- a/2022-01-24-the-five-laws-of-stupidity.org
+++ b/2022-01-24-the-five-laws-of-stupidity.org
@@ -41,6 +41,20 @@ defines the five “laws of stupidity” as:
 3. A stupid person is a person who causes losses to another person or
    a group of persons while himself deriving no gain and even possibly
    incurring losses;
+
+  #+CAPTION: An imaginary dissection
+  #+ATTR_HTML: :alt gains and losses :title An imaginary dissection :align center
+  #+ATTR_HTML: :width 80%
+  [[http://0--key.github.io/assets/img/learning/Chart_of_stupidity.png]]
+
+#+begin_quote
+Our daily life is mostly made up of cases in which we lose money
+and/or time and/or energy and/or appetite, cheerfulness, and good
+health because of the improbable action of some preposterous creature
+who has nothing to gain and indeed gains nothing from causing us
+embarrassment, difficulties or harm.
+#+end_quote
+
 4. Nonstupid people always underestimate the damaging power of stupid
    individuals;
 5. A stupid person is the most dangerous type of person.
