A source text about behaviorism in learning

--- a/2022-02-01-learning-perspectives-behaviorism.org
+++ b/2022-02-01-learning-perspectives-behaviorism.org
@@ -32,3 +32,195 @@ stimuli and behavior (responces).
 *Example:* Self management
 ~Response substitution~
 
+* Source text
+
+Let's continue with behavior business the first theoretical
+perspective we would like to further explore we are going to to look
+into a definition and then study two particular kinds of learning
+classical conditioning and operant conditioning which are the central
+forms of learning studied from the perspective of behaviorism. But
+before we do that we zoom into two researchers who have been very
+influential in this particular area of learning theory Edward
+Thorndike and John Watson.
+
+Thorndike was researcher who studied for instance behavior cats. Cats
+were put into cages which were called puzzle boxes and as soon as they
+were put in such gauge the cats usually try to find its way out of the
+cage of course and coincidentally pressed a lever which opened the
+door of the cage and an able to get to get out of the cage now when
+you put such a get back into the cage and enclose the door the cat
+will more quickly find the lever and press it and jump out of the cage
+and once again the next trial again put get into the cage he
+immediately grabs the lever opens the door and gets out of the cage
+now this is what phone dyke considered the law of effect an act which
+has been rewarded will return in the future will be shown more often
+in the future because of this reward so the act is strengthened
+basically that's the idea so we can strengthen particular new forms of
+behavior by rewarding them by providing positive reinforcement and
+that is the law of effect has put forward by Edward full night now
+John Watson was a more of a philosopher he published his behaviour
+manifesto in 1917 and we can have a small look into the first
+paragraph of the manifest out I'll try to move my own face a bit in
+order to be able to read what is written here ok here we are
+psychology as the behaviorist fuse it is a purely objective as mental
+branch of natural science is theoretical goal is prediction and
+control of behavior introspection forms no essential part of its
+methods nor is a scientific value of its data dependent upon the
+readiness with which they lend themselves to interpretation in terms
+of consciousness the behaviorist in his efforts to get a unitary
+scheme of animal responds recognizes notified in line between man and
+route the behavior of man with all of its refinement and complexity
+forms only a part of the behaviorist total scheme of Investigation ok
+what does it say well first of all man human beings and animals are
+put on the same line and studying their behavior is basically done
+with the same methods it's just a matter of natural science so we do
+not need such things as introspection or free will as Skinner ruger is
+going to discuss later on in this module these are concepts
+introspection free will let's say desires or memory or decisions or
+whatever they stem from the Middle Ages in which we were not able to
+completely explain and predict human behavior that's what we want we
+want to predict and control behavior and we are developing methods
+derived from natural science to study the behavior and our basic let's
+say point of view is the human act the human behavior and the animal
+behavior for that matter and we try to find the rules which determine
+how and how animals behave that is the objective of dangerous okay
+let's continue now with with the definition of learning in the domain
+of behaviorism learning is supposed to be conditioning it leads to new
+connections between external stimuli and behavior conditioning means
+influencing the conditions under which behavior operates so we are not
+directly influencing the individual the learner we are not saying you
+have to do this and that no we're just changing you're arranging the
+environment the conditions and we will see the effect on the behavior
+of learner there will be new connections between external stimuli and
+responses and internal responses that is the basic idea so beaver ism
+is in a wave let's say already emphasizing this basic connection
+between stimulus and response response which is also let's say the
+basic building block of our brain as neuro scientists nowadays study
+it the neuron which also is a connection or creates a connection
+between stimulus and restaurants okay so that connection is important
+and we will see that effect two types of connections and there are
+also two types of learning from the perspective of behaviorism
+classical conditioning and operant conditioning classical conditioning
+focuses on the change of behavior in wage not the behavior itself
+changes but the environment changes let's see how tough love studied
+the way dogs started to salivate in the view of a piece of meat these
+dogs were hungry they saw a piece of meat and immediately autonomously
+excited to salivate no decision no plans no ideas of how I have to
+myself no for digesting this food so I'm try to get some some salad I
+my mouth and then it will become easier no nothing whatsoever just an
+autonomous response and then the dogs the doc is prepared to eat meat
+but whenever the meat was offered together with the sound of a ringing
+Bell of discovered that the dog also started to salivate when this
+belt started touring without you know any meat whatsoever so there was
+a connection made between the ringing of the bell and the salivation
+response a new connection which is not existent before but it created
+this connection this learning process the autonomous response of
+salivating as soon as the bell rings an interesting effect and then in
+the indeed an extension of the repertoire of the doc okay now this
+seems all out old-fashioned and laboratory life etc but whenever we
+zoom into the way students behave in classrooms we can see examples of
+what we call fear conditioning let me take my own example I was a
+student in secondary school not very able to do you know the Latin
+exercises translating pieces of Julius Caesar an effort and what
+happened so I often got very bad marks for that particular activity
+now as soon as I saw the teacher I already started to tremble my
+heartbeat raged etc I started to sweat and all these typical
+autonomous fear responses which were connected to the act of
+translating you know we're also generalized to the teacher mini
+apparatus man who happened to be a former police officer but anyway
+that's not important sorry you made some impression it was a big man
+but that forget about that you know the whole learning process is is
+the fear conditioning the generalization of the fear response to the
+person of the teacher or even perhaps the book as soon as you open the
+book you know yards on the train go again etc etc well this is a
+conditioned fear response and it is very strong and very difficult to
+resting extinguish and very powerful and influential so therefore this
+learning process as few as studied by behaviorist is still very
+relevant in our classrooms Oh enough about classical condition
+conditioning we now move to operant conditioning and here we see that
+a different kind of learning because not so much the stimulus is
+changed as well the response is changed so for instance when we learn
+a dog to get the newspaper you know out of the post box we gradually
+reward the dog for doing that particular piece of behavior step by
+step so we dogs I got born you know with the idea of newspapers has to
+be less active to be drawn after of post boxes and offer to to the
+master no not such a thing we have to reward the dark walking to the
+post box for me no nose into the newspaper and then grabbing the
+newspaper and then getting newspaper out of the post box and then
+gradually walking to the bedroom and offering the master so this is a
+step-by-step gradual process in which new new behavior new complex
+behavior is actually acquired by the doc so not the responses changed
+ringing Bell of the doc in paphos laboratory here the behavior itself
+is changed you know getting the newspaper out of the post box
+therefore we call this response substitution whereas the foreman won
+the classical conditioning one was called stimulus substitution okay
+now let's watch a short interview with a virus Skinner with the most
+famous researcher in this area and who actually explains how pigeons
+are trained to pack on a particular disk to get some food and how this
+is also you know an explanation the model for the way people behave
+and then we return to the issue of free will let's see what he is
+going to say I'll put myself out of the window here because otherwise
+you are distracted and we have to of course HD video oops here we go
+now the Vengeance read this one gives every indication because it's
+been taught to distinguish between two words to behave appropriately
+it is learn his different response to each sign by being rewarded with
+moon so the bird isn't acting independently its behavior is shaped by
+controlling its environment the first task was to isolate an
+individual piece of behavior see how that can be changed you can
+attend this by keeping individual provincials it's about three
+quarters of their normal weight no the birds were always hungry and
+food could be used as an automatic reward the pigeon was studied in a
+uniform box wanna quickly grew used to one visa behavior packing had
+color today's profession on the ground cleavage in London making the
+disc produced the reward then the behavior of making who be studied in
+relation to how off underwater often when Skinner's turns what was the
+schedule of reinforcement anything but what we call schedules of
+reinforcement reinforcement layer called reward and you can schedule
+that is also that the reward occurred every now and then when App
+Engine does something we usually use of Islam religion thanking a
+little disc spot on the wall and you but don't be enforce every time
+you have ever against time or presently once every minute is up like
+that there are a large number of schedules and they have their special
+effects there is a good example of how we can move from the pigeon to
+the human case because one of the one of the schedules is very
+effective with grab from video with what we call the variable ratio
+schedule and what is at the heart of all gambling devices and then has
+the same effect we thinkin could become a political gambler just as a
+person down now the like that we found around with pigeons and could
+prove him right removing and changing the schedule makes it easier to
+interpret occasionally we don't say that the organ gambles admonish
+himself is audience right side work that was because it feels excited
+when he does so nothing of the sort people gamble because of the
+schedule of the reinforcement the columns and listen to all Gammons as
+they all have regulations don't into them probably learn from the
+kitchen we made it possible to interpret this fast to do very
+effectively where does that leave free will because we often we have a
+choice but to do things are not to do yes you see we leave in the
+possession of a prediction we are made of silk somehow or other than
+these internal state feelings and so on you have initiated something
+they started something they created have done something in law in a
+voluntary way we have will to act because you now look at the Act
+industry you find there are external reasons why this has happened in
+other words by discovering the causes of behavior we can dispose of
+the imagined internal cause we dispose a free will as an American
+divided Thank You Thomas network instead is that we believe in free
+will because we know about our behavior but not about its causes and
+of course it's a scientist it's the object of the science of the able
+to discover causes and once you have found those causes there is less
+you need with tribute to an internal active low and eventually I think
+the government ok erm again so we have now discussed classical
+conditioning and operant conditioning and you've seen the idea that
+that as explained by a skinner that perhaps free will and the
+determination in behavior and motives and emotions are I am not
+relevant anymore because we don't need these concepts to explain why
+people behave we just look at the consequences of behavior at the
+conditions of behavior in order to understand how evil act and that's
+enough and that leaves us with enough explanation power in fact to
+predict and control behaviour and John Watson is a statement okay this
+position is important it is irrelevant it's still very relevant
+because we can as I explained already with the fear conditioning
+example see very powerful and influential examples of these guys have
+learned these kinds of learning in everyday squeeze therefore we do
+how we are helped believe this perspective but of course there are
+other perspectives as well as we learn soon discovered
+
